2006-03-13  Edward Hervey  <edward@fluendo.com>

	* gst/Makefile.am:
	* gst/gst.override:
	* gst/gstbase.override:
	Added base elements override file.
	* gst/gstpad.override:
	Added override for gst_pad_alloc_buffer_and_set_caps

2006-03-10  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override:
	Commited a bit too much :)

2006-03-10  Edward Hervey  <edward@fluendo.com>

	* gst/base.defs:
	typo fix for gst_type_find_helper()
	Added new API : gst_type_find_helper_for_buffer()
	* gst/gst.override:
	override for gst.type_find_helper_for_buffer()

2006-03-10  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	* gst/gst.defs:
	Added new API:
	gst_pipeline_[get|set]_auto_flush_bus()
	gst_uri_has_protocol()
	GST_RESOURCE_ERROR_NO_SPACE_LEFT

2006-03-07  Edward Hervey  <edward@fluendo.com>

	* gst/arg-types.py:
	Add ReturnType and Parameter for GstCaps.
	This allows the codegenerator to wrap properly more virtual proxies.

2006-03-07  Edward Hervey  <edward@fluendo.com>

	* gst/base.defs:
	Update for new check_get_range virtual method in GstBaseSrc

2006-03-06  Michael Smith  <msmith@fluendo.com>

	* gst/gststructure.override:
	* gst/gsttaglist.override:
	  Don't leak PyObjects wrapping GValues when indexing into a
	  GStStructure. Also fix a copy/paste identical bug in taglists.

2006-03-02  Edward Hervey  <edward@fluendo.com>

	* gst/pygstminiobject.h:
	Some crack distributions do weirdo stuff with PYGIL_API_IS_BUGGY.
	Let's keep our own detection.
	Closes #333055

2006-02-28  Jan Schmidt  <thaytan@mad.scientist.com>

	* pygst.py.in:
	Fix a silly logic inversion typo

2006-02-27  Edward Hervey  <edward@fluendo.com>

	* pygst.py.in:
	use 'raise StandardError' instead of 'assert' so that compiled code
	raise a noticeable exception.
	Closes #332586

2006-02-22  Joe Wreschnig  <piman@sacredchao.net>

	reviewed by: Edward Hervey  <edward@fluendo.com>

	* gst/gstmodule.c: (init_gst):
	gst.gst_version uses the result of gst_version() rather than use